# AI-Job-Agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: quality.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260711_0001_foundation.py  20260711_0002_matching_profile_fields.py  20260711_0003_generated_documents.py  20260711_0004_query_indexes.py  20260712_0005_unique_job_fingerprints.py  20260712_0006_timestamp_nullability.py  20260712_0007_ai_usage_metadata.py  20260712_0008_cv_imports.py  20260712_0009_job_discovery.py  20260720_0010_cv_optimization.py  20260721_0011_cover_letters.py
backend/app/: __init__.py  ai.py  config.py  cover_letter_ai.py  cover_letter_api.py  cover_letter_schemas.py  cover_letters.py  cv.py  cv_ai.py  cv_exports.py  cv_optimization.py  cv_optimization_ai.py  cv_optimization_api.py  cv_optimization_schemas.py  cv_schemas.py  db.py  discovery.py  discovery_api.py  discovery_providers.py  discovery_schemas.py  discovery_worker.py  main.py  matching.py  models.py  schemas.py  services.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_api_errors.py  test_config.py  test_cover_letters.py  test_cv.py  test_cv_ai.py  test_cv_api.py  test_cv_optimization.py  test_database.py  test_discovery.py  test_e2e.py  test_matching.py  test_performance.py  test_release_configuration.py  test_security.py  test_service_concurrency.py
docs/: ai-architecture.md  api.md  architecture.md  configuration.md  cover-letters.md  cv-import.md  cv-optimization.md  dependency-audit.md  deployment.md  job-discovery.md  performance-profile.md  production-readiness-review.md  providers.md  roadmap.md  security-audit.md  test-coverage.md  ux-review.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: cv-import.spec.ts  discovery.spec.ts
frontend/src/: CoverLetterPanel.tsx  CvImportPanel.tsx  CvOptimizationPanel.tsx  DiscoveryPanel.tsx  cover-letter-api.ts  cv-api.ts  cv-optimization-api.ts  cv-types.ts  discovery-api.ts  main.tsx  styles.css
