[project]
name = "eu-job-agent-api"
version = "1.0.0"
description = "Approval-first EU job application API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5,<2",
  "fastapi>=0.139,<1",
  "email-validator>=2.3,<3",
  "openai>=2.45,<3",
  "pydantic>=2.13.4,<3",
  "pydantic-settings>=2.14.2,<3",
  "psycopg[binary]>=3.3.4,<4",
  "sqlalchemy>=2.0.51,<3",
  "uvicorn[standard]>=0.51,<1",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.9.4,<2",
  "httpx2>=2.5,<3",
  "mypy>=2.2,<3",
  "pip-audit>=2.10.1,<3",
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1,<8",
  "ruff>=0.15.21,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions", "build", ".deps"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
exclude = ["alembic", "tests"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
